; ModuleID = '/home/carl/AnghaBench/linux/sound/firewire/extr_amdtp-am824.c_amdtp_am824_set_midi_position.c'
source_filename = "/home/carl/AnghaBench/linux/sound/firewire/extr_amdtp-am824.c_amdtp_am824_set_midi_position.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amdtp_stream = type { %struct.amdtp_am824* }
%struct.amdtp_am824 = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @amdtp_am824_set_midi_position(%struct.amdtp_stream* %0, i32 %1) #0 {
  %3 = alloca %struct.amdtp_stream*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.amdtp_am824*, align 8
  store %struct.amdtp_stream* %0, %struct.amdtp_stream** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.amdtp_stream*, %struct.amdtp_stream** %3, align 8
  %7 = getelementptr inbounds %struct.amdtp_stream, %struct.amdtp_stream* %6, i32 0, i32 0
  %8 = load %struct.amdtp_am824*, %struct.amdtp_am824** %7, align 8
  store %struct.amdtp_am824* %8, %struct.amdtp_am824** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.amdtp_am824*, %struct.amdtp_am824** %5, align 8
  %11 = getelementptr inbounds %struct.amdtp_am824, %struct.amdtp_am824* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
